// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpeedGraderHeader doesnt show the group name when anonymous 1`] = `
<View
  style={
    Array [
      undefined,
      Object {
        "backgroundColor": "#FFFFFF",
        "marginTop": 16,
      },
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <ForwardRef
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "flex": 1,
          "flexDirection": "row",
        }
      }
      testID="header.context.button.4"
      underlayColor="#FFFFFF"
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#FFFFFF",
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "height": 40,
              "marginLeft": 16,
              "width": 40,
            }
          }
        >
          <Avatar
            avatarURL=""
            key="4"
            userName="Group"
          />
        </View>
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "column",
              "justifyContent": "space-between",
              "marginLeft": 12,
            }
          }
        >
          <Text
            accessibilityTraits="header"
            numberOfLines={1}
            style={
              Object {
                "fontSize": 16,
                "fontWeight": "600",
              }
            }
          >
            Group
          </Text>
          <OldSubmissionStatusLabel
            onlineSubmissionType={true}
            status="submitted"
          />
        </View>
      </View>
    </ForwardRef>
    <View
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "marginRight": 12,
        }
      }
    >
      <ForwardRef
        onPress={[Function]}
        testID="header.navigation-eye"
        underlayColor="#FFFFFF"
      >
        <View
          style={
            Object {
              "paddingLeft": 20,
            }
          }
        >
          <Image
            source={
              Object {
                "uri": "eyeLine",
              }
            }
            style={
              Object {
                "height": 20,
                "tintColor": "#8B969E",
                "width": 20,
              }
            }
          />
        </View>
      </ForwardRef>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "marginRight": 12,
        }
      }
    >
      <ForwardRef
        onPress={[MockFunction]}
        testID="header.navigation-done"
        underlayColor="#FFFFFF"
      >
        <Text
          style={
            Object {
              "color": "#008EE2",
              "fontSize": 18,
              "fontWeight": "600",
            }
          }
        >
          Done
        </Text>
      </ForwardRef>
    </View>
  </View>
</View>
`;

exports[`SpeedGraderHeader renders with a grade-only submission 1`] = `
<View
  style={
    Array [
      undefined,
      Object {
        "backgroundColor": "#FFFFFF",
        "marginTop": 16,
      },
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <ForwardRef
      onPress={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "flex": 1,
          "flexDirection": "row",
        }
      }
      testID="header.context.button.4"
      underlayColor="#FFFFFF"
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#FFFFFF",
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "height": 40,
              "marginLeft": 16,
              "width": 40,
            }
          }
        >
          <Avatar
            avatarURL="https://farm3.staticflickr.com/2926/14690771011_945f91045a.jpg"
            key="4"
            userName="Allura"
          />
        </View>
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "column",
              "justifyContent": "space-between",
              "marginLeft": 12,
            }
          }
        >
          <Text
            accessibilityTraits="header"
            numberOfLines={1}
            style={
              Object {
                "fontSize": 16,
                "fontWeight": "600",
              }
            }
          >
            Allura
          </Text>
          <OldSubmissionStatusLabel
            onlineSubmissionType={true}
            status="none"
          />
        </View>
      </View>
    </ForwardRef>
    <View
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "marginRight": 12,
        }
      }
    >
      <ForwardRef
        onPress={[Function]}
        testID="header.navigation-eye"
        underlayColor="#FFFFFF"
      >
        <View
          style={
            Object {
              "paddingLeft": 20,
            }
          }
        >
          <Image
            source={
              Object {
                "uri": "eyeLine",
              }
            }
            style={
              Object {
                "height": 20,
                "tintColor": "#8B969E",
                "width": 20,
              }
            }
          />
        </View>
      </ForwardRef>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "marginRight": 12,
        }
      }
    >
      <ForwardRef
        onPress={[MockFunction]}
        testID="header.navigation-done"
        underlayColor="#FFFFFF"
      >
        <Text
          style={
            Object {
              "color": "#008EE2",
              "fontSize": 18,
              "fontWeight": "600",
            }
          }
        >
          Done
        </Text>
      </ForwardRef>
    </View>
  </View>
</View>
`;

exports[`SpeedGraderHeader renders with a group submission 1`] = `
<View
  style={
    Array [
      undefined,
      Object {
        "backgroundColor": "#FFFFFF",
        "marginTop": 16,
      },
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <ForwardRef
      onPress={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "flex": 1,
          "flexDirection": "row",
        }
      }
      testID="header.groupList.button.1"
      underlayColor="#FFFFFF"
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#FFFFFF",
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "height": 40,
              "marginLeft": 16,
              "width": 40,
            }
          }
        >
          <Avatar
            avatarURL="https://farm3.staticflickr.com/2926/14690771011_945f91045a.jpg"
            key="4"
            userName="Allura"
          />
        </View>
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "column",
              "justifyContent": "space-between",
              "marginLeft": 12,
            }
          }
        >
          <Text
            accessibilityTraits="header"
            numberOfLines={1}
            style={
              Object {
                "fontSize": 16,
                "fontWeight": "600",
              }
            }
          >
            Allura
          </Text>
          <OldSubmissionStatusLabel
            onlineSubmissionType={true}
            status="submitted"
          />
        </View>
      </View>
    </ForwardRef>
    <View
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "marginRight": 12,
        }
      }
    >
      <ForwardRef
        onPress={[Function]}
        testID="header.navigation-eye"
        underlayColor="#FFFFFF"
      >
        <View
          style={
            Object {
              "paddingLeft": 20,
            }
          }
        >
          <Image
            source={
              Object {
                "uri": "eyeLine",
              }
            }
            style={
              Object {
                "height": 20,
                "tintColor": "#8B969E",
                "width": 20,
              }
            }
          />
        </View>
      </ForwardRef>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "marginRight": 12,
        }
      }
    >
      <ForwardRef
        onPress={[MockFunction]}
        testID="header.navigation-done"
        underlayColor="#FFFFFF"
      >
        <Text
          style={
            Object {
              "color": "#008EE2",
              "fontSize": 18,
              "fontWeight": "600",
            }
          }
        >
          Done
        </Text>
      </ForwardRef>
    </View>
  </View>
</View>
`;

exports[`SpeedGraderHeader renders with a submission 1`] = `
<View
  style={
    Array [
      undefined,
      Object {
        "backgroundColor": "#FFFFFF",
        "marginTop": 16,
      },
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <ForwardRef
      onPress={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "flex": 1,
          "flexDirection": "row",
        }
      }
      testID="header.context.button.4"
      underlayColor="#FFFFFF"
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#FFFFFF",
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "height": 40,
              "marginLeft": 16,
              "width": 40,
            }
          }
        >
          <Avatar
            avatarURL="https://farm3.staticflickr.com/2926/14690771011_945f91045a.jpg"
            key="4"
            userName="Allura"
          />
        </View>
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "column",
              "justifyContent": "space-between",
              "marginLeft": 12,
            }
          }
        >
          <Text
            accessibilityTraits="header"
            numberOfLines={1}
            style={
              Object {
                "fontSize": 16,
                "fontWeight": "600",
              }
            }
          >
            Allura
          </Text>
          <OldSubmissionStatusLabel
            onlineSubmissionType={true}
            status="submitted"
          />
        </View>
      </View>
    </ForwardRef>
    <View
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "marginRight": 12,
        }
      }
    >
      <ForwardRef
        onPress={[Function]}
        testID="header.navigation-eye"
        underlayColor="#FFFFFF"
      >
        <View
          style={
            Object {
              "paddingLeft": 20,
            }
          }
        >
          <Image
            source={
              Object {
                "uri": "eyeLine",
              }
            }
            style={
              Object {
                "height": 20,
                "tintColor": "#8B969E",
                "width": 20,
              }
            }
          />
        </View>
      </ForwardRef>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "marginRight": 12,
        }
      }
    >
      <ForwardRef
        onPress={[MockFunction]}
        testID="header.navigation-done"
        underlayColor="#FFFFFF"
      >
        <Text
          style={
            Object {
              "color": "#008EE2",
              "fontSize": 18,
              "fontWeight": "600",
            }
          }
        >
          Done
        </Text>
      </ForwardRef>
    </View>
  </View>
</View>
`;

exports[`SpeedGraderHeader renders with an over-due grade-only submission 1`] = `
<View
  style={
    Array [
      undefined,
      Object {
        "backgroundColor": "#FFFFFF",
        "marginTop": 16,
      },
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <ForwardRef
      onPress={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "flex": 1,
          "flexDirection": "row",
        }
      }
      testID="header.context.button.4"
      underlayColor="#FFFFFF"
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#FFFFFF",
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "height": 40,
              "marginLeft": 16,
              "width": 40,
            }
          }
        >
          <Avatar
            avatarURL="https://farm3.staticflickr.com/2926/14690771011_945f91045a.jpg"
            key="4"
            userName="Allura"
          />
        </View>
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "column",
              "justifyContent": "space-between",
              "marginLeft": 12,
            }
          }
        >
          <Text
            accessibilityTraits="header"
            numberOfLines={1}
            style={
              Object {
                "fontSize": 16,
                "fontWeight": "600",
              }
            }
          >
            Allura
          </Text>
          <OldSubmissionStatusLabel
            onlineSubmissionType={true}
            status="missing"
          />
        </View>
      </View>
    </ForwardRef>
    <View
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "marginRight": 12,
        }
      }
    >
      <ForwardRef
        onPress={[Function]}
        testID="header.navigation-eye"
        underlayColor="#FFFFFF"
      >
        <View
          style={
            Object {
              "paddingLeft": 20,
            }
          }
        >
          <Image
            source={
              Object {
                "uri": "eyeLine",
              }
            }
            style={
              Object {
                "height": 20,
                "tintColor": "#8B969E",
                "width": 20,
              }
            }
          />
        </View>
      </ForwardRef>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "marginRight": 12,
        }
      }
    >
      <ForwardRef
        onPress={[MockFunction]}
        testID="header.navigation-done"
        underlayColor="#FFFFFF"
      >
        <Text
          style={
            Object {
              "color": "#008EE2",
              "fontSize": 18,
              "fontWeight": "600",
            }
          }
        >
          Done
        </Text>
      </ForwardRef>
    </View>
  </View>
</View>
`;

exports[`SpeedGraderHeader renders with an ungraded submission 1`] = `
<View
  style={
    Array [
      undefined,
      Object {
        "backgroundColor": "#FFFFFF",
        "marginTop": 16,
      },
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <ForwardRef
      onPress={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "flex": 1,
          "flexDirection": "row",
        }
      }
      testID="header.context.button.4"
      underlayColor="#FFFFFF"
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#FFFFFF",
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "height": 40,
              "marginLeft": 16,
              "width": 40,
            }
          }
        >
          <Avatar
            avatarURL="https://farm3.staticflickr.com/2926/14690771011_945f91045a.jpg"
            key="4"
            userName="Allura"
          />
        </View>
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "column",
              "justifyContent": "space-between",
              "marginLeft": 12,
            }
          }
        >
          <Text
            accessibilityTraits="header"
            numberOfLines={1}
            style={
              Object {
                "fontSize": 16,
                "fontWeight": "600",
              }
            }
          >
            Allura
          </Text>
          <OldSubmissionStatusLabel
            onlineSubmissionType={false}
            status="missing"
          />
        </View>
      </View>
    </ForwardRef>
    <View
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "marginRight": 12,
        }
      }
    >
      <ForwardRef
        onPress={[Function]}
        testID="header.navigation-eye"
        underlayColor="#FFFFFF"
      >
        <View
          style={
            Object {
              "paddingLeft": 20,
            }
          }
        >
          <Image
            source={
              Object {
                "uri": "eyeLine",
              }
            }
            style={
              Object {
                "height": 20,
                "tintColor": "#8B969E",
                "width": 20,
              }
            }
          />
        </View>
      </ForwardRef>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "marginRight": 12,
        }
      }
    >
      <ForwardRef
        onPress={[MockFunction]}
        testID="header.navigation-done"
        underlayColor="#FFFFFF"
      >
        <Text
          style={
            Object {
              "color": "#008EE2",
              "fontSize": 18,
              "fontWeight": "600",
            }
          }
        >
          Done
        </Text>
      </ForwardRef>
    </View>
  </View>
</View>
`;

exports[`SpeedGraderHeader renders with no submission 1`] = `
<View
  style={
    Array [
      undefined,
      Object {
        "backgroundColor": "#FFFFFF",
        "marginTop": 16,
      },
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <ForwardRef
      onPress={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "flex": 1,
          "flexDirection": "row",
        }
      }
      testID="header.context.button.4"
      underlayColor="#FFFFFF"
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#FFFFFF",
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "height": 40,
              "marginLeft": 16,
              "width": 40,
            }
          }
        >
          <Avatar
            avatarURL="https://farm3.staticflickr.com/2926/14690771011_945f91045a.jpg"
            key="4"
            userName="Allura"
          />
        </View>
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "column",
              "justifyContent": "space-between",
              "marginLeft": 12,
            }
          }
        >
          <Text
            accessibilityTraits="header"
            numberOfLines={1}
            style={
              Object {
                "fontSize": 16,
                "fontWeight": "600",
              }
            }
          >
            Allura
          </Text>
          <OldSubmissionStatusLabel
            onlineSubmissionType={true}
            status="none"
          />
        </View>
      </View>
    </ForwardRef>
    <View
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "marginRight": 12,
        }
      }
    >
      <ForwardRef
        onPress={[Function]}
        testID="header.navigation-eye"
        underlayColor="#FFFFFF"
      >
        <View
          style={
            Object {
              "paddingLeft": 20,
            }
          }
        >
          <Image
            source={
              Object {
                "uri": "eyeLine",
              }
            }
            style={
              Object {
                "height": 20,
                "tintColor": "#8B969E",
                "width": 20,
              }
            }
          />
        </View>
      </ForwardRef>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "marginRight": 12,
        }
      }
    >
      <ForwardRef
        onPress={[MockFunction]}
        testID="header.navigation-done"
        underlayColor="#FFFFFF"
      >
        <Text
          style={
            Object {
              "color": "#008EE2",
              "fontSize": 18,
              "fontWeight": "600",
            }
          }
        >
          Done
        </Text>
      </ForwardRef>
    </View>
  </View>
</View>
`;
